Start gating on ubuntu-bionic
Now that ubuntu-bionic is released, we can gate on it.

Change-Id: Ia5795ca0016e6be55ab595e2d64f8088f6d015d8

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -60,7 +60,9 @@
     gate:
       jobs:
         - ansible-role-whisper-fedora-27
+        - ansible-role-whisper-ubuntu-bionic
         - ansible-role-whisper-ubuntu-xenial
         - ansible-role-whisper-src-fedora-27
+        - ansible-role-whisper-src-ubuntu-bionic
         - ansible-role-whisper-src-ubuntu-xenial
         - tox-linters
